# AndroidOpenCL

./: README.md  build.gradle  settings.gradle
ImageProcessing-backup/: build.gradle  gradle.properties
ImageProcessing-backup/app/: build.gradle
ImageProcessing-backup/app/src/androidTest/java/com/image/cse/imageprocessing/: ExampleInstrumentedTest.kt
ImageProcessing-backup/app/src/main/: AndroidManifest.xml
ImageProcessing-backup/app/src/main/java/com/image/cse/imageprocessing/: MainActivity.java  MainActivity_cameraView.kt
ImageProcessing-backup/app/src/main/res/layout/: activity_main.xml  activity_main_cameaview.xml
ImageProcessing-backup/openCVLibrary342/: build.gradle
app/: Android.mk  Application.mk  CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CLprocessor.cpp  common.hpp  jni.c  sendImage.cpp
app/src/main/java/com/image/cse/imageprocessing/: MainActivity.java  MainActivity.kt  MainActivity_other.kt  MyGLSurfaceView.kt  NativePart.java
app/src/main/res/layout/: activity_main.xml  activity_main_other.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/image/cse/imageprocessing/: ExampleUnitTest.kt
openCVLibrary343/src/main/java/org/opencv/android/: CameraGLRendererBase.java~HEAD
opencl-sdk-1.2.2/: Android.mk  README.md
opencl-sdk-1.2.2/src/examples/vector_image_ops/: compressed_tp10_vector_image_ops.cpp
sendCode/: .cproject  .project  main.cpp
sendCode/Debug/: file.txt  input.txt  makefile  sendCode
